<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/beranda"
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item android:title="@string/pencarian"
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"/>
    <item android:title="@string/pengaturan"
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_baseline_settings_24"/>
</menu>