...
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintStart_toStartOf="@id/searchTitle"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/divider">-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:hint="@string/app_name"
        app:layout_constraintStart_toStartOf="@+id/searchTitle"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageButton
        android:id="@+id/magniGlass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/searchView"
        app:layout_constraintStart_toEndOf="@+id/searchView"
        app:layout_constraintTop_toTopOf="@+id/searchView"
...
